--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About page</title>
+    <title>Home page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- AOS CSS for Scroll Animations -->
@@ -44,7 +43,7 @@
         }
 
         .backgroung {
-            background-image: url(../content/imgs/black-friday-sales-sign-neon-light.jpg);
+            background-image: url(../content/imgs/Untitled-2.png);
             width: 100%;
             height: 500px;
             background-size: cover;
@@ -73,97 +72,70 @@
             margin-top: 10px;
         }
 
-        .page {
-            text-align: center;
-            padding: 30px;
-            color: black;
-            font-size: xx-large;
-            font-family: Arial;
-        }
-
-        .set {
-            font-size: larger;
-            font-family: Arial;
-            color: gray;
-        }
-
-        .text {
-            padding: 30px;
-            font-weight: bold;
-            font-size: 4rem;
-            font-family: Arial;
-            color: rgb(10, 10, 10);
-            margin-top: 100px;
-            text-align: center;
-        }
-
         .btn {
-            background-color: rgb(71, 11, 61);
+            background-color: rgb(243, 243, 247);
+            display: block;
+            margin: 20px auto 0;
+            padding: 10px 20px;
+            width: 120px;
+            border: none;
             font-weight: bold;
-            box-shadow: 3px 3px 8px solid black;
-            color: #ffffff;
-            margin-top: 10px;
-            width: 200px;
-            height: 50px;
             box-shadow: 3px 3px 8px;
         }
 
-        .footer {
+        .slid-2 {
+            margin: 40px 0 20px;
+            color: black;
+            font-size: 3rem;
+            font-family: 'Times New Roman';
+            text-align: center
+        }
+
+         .footer {
             background-image: url(../content/imgs/Untitled-2-Recovered\ gray.png);
             width: 100%;
             height: 100%;
             text-align: center;
+            padding: 10px;
         }
 
-        .copy{
+         .copy{
             color: #2b2727;
             font-size: small;
             font-family: 'Courier New';
         }
 
-      
     </style>
 </head>
 
 <body>
 
-    <div class="modal" id="frank">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header text-center">
-                    <h1>Add</h1>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white border-bottom">
         <div class="container">
-            <a class="navbar-brand" href="index.html">ONLINE SHIPPING</a>
+            <a class="navbar-brand" href="#">ONLINE SHIPPING</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown" data-aos="fade-down">
-                       <li class="nav-item dropdown">
-                         <li class="nav-item" data-aos="fade-down"><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="shopDropdown" role="button" data-bs-toggle="dropdown">
                             Shop
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./shopnow.html">All Product</a></li>
+                            <li><a class="dropdown-item" href="#">All Product</a></li>
                             <li><a class="dropdown-item" href="#">New Collection</a></li>
                         </ul>
-                        
-                    <li class="nav-item" data-aos="fade-down"><a class="nav-link" href="sustainability.html">Sustainability</a></li>
-                    <li class="nav-item" data-aos="fade-down"><a class="nav-link active" href="about.html">About</a></li>
-                    <li class="nav-item" data-aos="fade-down"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item" data-aos="fade-down">
-                        <a class="nav-link" href="./shopnow.html" data-bs-target="#frank" data-bs-toggle="modal"><i
-                                class="bi bi-bag cart-icon"></i> Cart</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="#">Sustainability</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./shopnow.html">
+                            <i class="bi bi-bag"></i> Cart
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -171,67 +143,70 @@
     </nav>
 
     <!-- Free Shipping Bar -->
-    <div class="free-shipping" data-aos="slide-down">
+    <div class="free-shipping" data-aos="fade-down">
         Free shipping on orders over $50 amount
     </div>
 
     <!-- Hero Section -->
     <div class="backgroung">
         <div class="content">
-            <h1 class="slid" data-aos="slide-up">ABOUT US</h1>
-            <p class="pp" data-aos="slide-up" data-aos-delay="200">Lorem ipsum dolor sit amet consectetur.</p>
+            <h1 class="slid" data-aos="fade-up">Get All your items here!!!</h1>
+            <p class="pp" data-aos="fade-up" data-aos-delay="200">Painted clay ceramics made with love.</p>
+            <a href="./shopnow.html" class="btn" data-aos="zoom-in" data-aos-delay="400">Shop Now</a>
         </div>
     </div>
 
+    <!-- Bestsellers Section -->
     <section>
-        <h3 class="page" data-aos="slide-up">Mina is a brand born out of love for ceramics,<br> vivid colours and passion
-            for life.</h3>
+        <h1 class="slid-2" data-aos="fade-right">Our bestsellers</h1>
     </section>
 
+    <!-- Product Cards -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-7" data-aos="slide-right">
-                <img src="../content/imgs/portrait-happy-young-women.jpg" alt="" width="100%">
+            <div class="col-sm-3" data-aos="zoom-in">
+                <div class="card" style="width: 17rem;">
+                    <img src="../content/imgs/fancy-ladies-trousers.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">trouser <b>8$</b></p>
+                        <button class="btn btn-primary btn-sm text-dark">Buy</button>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-5" data-aos="slide-left">
-                <h1 class="pt-5">Alex & Laura</h1><br>
-                <p class="set">Two creative minds that came together at art school, Alex and Laura founded Mina with a
-                    shared passion for design and sustainability. For them, success is more than just about having a
-                    bestselling product. Every piece in our store has been created with love by Alex and Laura. They
-                    take inspiration from the world around them when it comes to shapes, colors, and the clay that they
-                    work with. Join us on our mission to fill every home with beautiful, sustainable décor. </p>
+
+            <div class="col-sm-3" data-aos="zoom-in" data-aos-delay="200">
+                <div class="card" style="width: 17rem;">
+                    <img src="../content/imgs/fancy-ladies-trousers.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">trouser <b>8$</b></p>
+                        <button class="btn btn-primary btn-sm text-dark">Buy</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3" data-aos="zoom-in" data-aos-delay="400">
+                <div class="card" style="width: 17rem;">
+                    <img src="../content/imgs/fancy-ladies-trousers.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">trouser <b>8$</b></p>
+                        <button class="btn btn-primary btn-sm text-dark">Buy</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3" data-aos="zoom-in" data-aos-delay="600">
+                <div class="card" style="width: 17rem;">
+                    <img src="../content/imgs/fancy-ladies-trousers.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">trouser <b>8$</b></p>
+                        <button class="btn btn-primary btn-sm text-dark">Buy</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-6" data-aos="slide-right">
-                <h2 class="text">Sustainability</h2>
-                <p class="set">Our thoughts about the planet impact everything we do, from the clay we use to the
-                    packaging we provide. Find out how we stay responsible.</p>
-                <a href="sustainability.html"><button class="btn">Read more</button></a>
-            </div>
-            <div class="col-sm-6" data-aos="slide-left">
-                <img src="../content/imgs/backgroung.jpg" class="p-5" alt="" width="100%">
-            </div>
-        </div>
-    </div>
-
-    <section>
-        <footer class="footer">
-            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni accusamus rem aliquid rerum ratione fugit
-                doloribus! Eius sapiente amet veritatis doloremque quia ab, officiis eaque tempora porro veniam molestiae
-                unde? Possimus amet beatae ipsum nemo iure maxime! Animi labore, aspernatur consequuntur et expedita
-                rerum itaque optio eos officiis porro delectus harum veritatis libero suscipit! Eveniet dolore iusto
-                nulla quos fuga possimus eius hic labore animi pariatur aut corrupti magni repellendus quod, nesciunt
-                enim ipsum doloremque delectus. Nihil eos ratione nulla perspiciatis cum id provident non, quibusdam
-                maxime. Quis nemo doloremque deserunt ipsa repellat nisi ad, consequuntur blanditiis distinctio, sunt
-                nesciunt?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, eveniet?</p>
-
-           <section class="list py-5">
+    <section class="footer p-4">
   <div class="container-fluid">
     <div class="row">
 
@@ -278,8 +253,6 @@
             <p class="copy">No copy write on this website<br>copy of 234.4543<br>desing by Frank Francis</p>
 </section>
 
-
-   
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
@@ -291,7 +264,7 @@
     <script>
         AOS.init({
             duration: 1000,
-            once: false // This allows animations every time you scroll into view
+            once: false
         });
     </script>
 
