--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         .backgroung {
-            background-image: url(../content/imgs/Untitled-2.png);
+            background-image: url(content/imgs/Untitled-2.png);
             width: 100%;
             height: 500px;
             background-size: cover;
@@ -92,7 +92,7 @@
         }
 
          .footer {
-            background-image: url(../content/imgs/Untitled-2-Recovered\ gray.png);
+            background-image: url(content/imgs/Untitled-2-Recovered\ gray.png);
             width: 100%;
             height: 100%;
             text-align: center;
@@ -270,3 +270,4 @@
 
 </body>
 </html>
+
